made base url's less project specific

--- a/App/Test.xcconfig
+++ b/App/Test.xcconfig
@@ -1,5 +1,5 @@
 #include "Production.xcconfig"
 
-API_BASE_URL_DEV = 7eleven-dev.azurewebsites.net/api/merchant-app
+API_BASE_URL_DEV = some.apiurl.dev.com
 
 DEFAULT_BASE_URL = API_BASE_URL_PROD
